# evalstack

./: .gitignore  AGENTS.md  DEMO.md  DEPLOY.md  PRODUCT.md  README.md  ROADMAP.md  docker-compose.yml  fly.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: architecture.md
examples/: eval-sample.yaml  quickstart.py
scripts/: seed-demo.py
sdk/: pyproject.toml
sdk/evalstack/: __init__.py  cli.py  client.py  models.py
server/: Dockerfile  main.py  requirements.txt
server/judges/: __init__.py  accuracy.py  helpfulness.py  length_check.py
tests/: test_sdk_smoke.py
web/: .gitignore  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/compare/[a]/[b]/: page.tsx
web/app/compare/runs/[a]/[b]/: page.tsx
web/app/runs/[id]/: page.tsx
web/components/: CompareSelector.tsx  DiffPane.tsx  EventCard.tsx  JudgeBadge.tsx  JudgeHistogram.tsx  RunCompareSelector.tsx
web/lib/: api.ts  diff.ts  format.ts  runStats.ts
