[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evalstack"
version = "0.1.0"
description = "Open-source LLM evaluation — drop-in SDK + CI plugin"
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kartik Aneja", email = "anejakartik68@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "respx>=0.21"]

[project.scripts]
evalstack = "evalstack.cli:main"

[project.urls]
Homepage = "https://github.com/anejakartik/evalstack"
Documentation = "https://github.com/anejakartik/evalstack#readme"
Issues = "https://github.com/anejakartik/evalstack/issues"

[tool.setuptools.packages.find]
include = ["evalstack*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
